--- a/about.html
+++ b/about.html
@@ -93,7 +93,8 @@
 					<li><a href="blog.html">BLOG</a><span>|</span></span></li>
 					<li><a href="about.html">ABOUT</a><span>|</span></li>
 					<li><a href="sitemap.xml" target="_blank">SITEMAP</a><span>|</span></li>
-					<li><a href="rss.xml" target="_blank">RSS</a></li>
+					<li><a href="rss.xml" target="_blank">RSS</a><span>|</span></li>
+					<li><a href="https://github.com/MPSites" target="_blank">GITHUB</a></li>
 				</ul>
 			</div>
 			<p>&copy; 2017 MILOŠ PAREZANOVIĆ ARCADE WORLD, ALL RIGHTS RESERVED.</p>
